--- a/README
+++ b/README
@@ -8,3 +8,7 @@ Then run it with:
 ./a.out
 
 Enter a number between 1 and 22 and you get the result.
+
+Just to prevent questions: I did this in C to improve my skills in that language.
+I know, in most other languages (for example python) it would be loads easier and
+the code would be shorter and it even would support arbitrarily high numbers, yadda yadda ^^.
