Added bigdigits library 2.2
With great thanks taken from here: http://www.di-mgt.com.au/bigdigits.html

--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 This is a solution for the Project Euler Problem 5:
 http://projecteuler.net/index.php?section=problems&id=5
 
-Just compile it with e.g.:
-gcc main.c
+Just compile all source files with e.g.:
+gcc *.c *.h
 
 Then run it with:
 ./a.out
